--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Page Title</title>
+    </head>
+    <body>
+    
+        <div class="main">
+            <span class="box one">1</span>
+            <span class="box two">2</span>
+            <span class="box three">3</span>
+            <span class="box four">4</span>
+            <span class="box five">5</span>
+            <span class="box six">6</span>
+        </div>
+        
+    </body>
+</html>
